Fix overlapping text in create account secion

--- a/styles/index.css
+++ b/styles/index.css
@@ -361,7 +361,7 @@ footer {
 }
 
 .footer-big{
-  top: 600px;
+  top: 650px;
   position: relative;
   width: 85%;
   margin: 0 auto;
